# animepahe-cli

./: CMakeLists.txt  README.md
extension/: README.md  background.js  manifest.json
include/: cookiehelper.hpp  cookiejar.hpp
libs/: animepahe.cpp  cookiehelper.cpp  cookiejar.cpp  kwikpahe.cpp  utils.cpp
